--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Churros Amigos v2</title>
-    <meta name="description" content="SiteBase: html + css + js">
+    <title>amorphian.io</title>
+    <meta name="description" content="portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="https://use.typekit.net/xyk3axk.css">
