--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <div class="logo">
-        <img src="" alt="" width="" height="">
-    </div>
     
-    <div class="">
-        <h1>amorphian.io dev</h1>
-        <p> is under construction</p>
+    <div class="hero-img">
+        <div class="hero-text">
+            <h1>amorphian.io</h1>
+            <p> is under construction</p>
+        </div>
     </div>
    
+
 </body>
 </html>
