basic reset, font weight

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 
 <body>
     
-    <div class="hero-img">
-        <div class="hero-text">
-            <h1>amorphian.io</h1>
-            <p> is under construction</p>
-        </div>
+    <div>
+        <h1>amorphian.io</h1>
+        <p> is under construction</p>
     </div>
    
 
