--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
         <h1>amorphian.io</h1>
         <p> is under construction</p>
     </div>
-   
+
+    <div class="gears" id="two-gears">
+        
+        <div class="gears-container">
+
+            <div class="gear-rotate"></div>
+
+            <div class="gear-rotate-left"></div>
+        </div>
+        
+    </div>
 
 </body>
 </html>
