added pages, typeset, mobile nav

--- a/services/index.html
+++ b/services/index.html
@@ -3,10 +3,10 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>amorphian.io</title>
+        <title>about amorphian</title>
         <meta name="description" content="portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link rel="stylesheet" href="../css/style.css" type="text/css">
         <link rel="stylesheet" href="https://use.typekit.net/xyk3axk.css">
     
          
@@ -27,17 +27,17 @@
                         d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" 
                         />
                     </svg></a></li>
-                <li><a href="about/index.html">About</a></li>
-                <li><a href="portfolio/index.html">Portfolio</a></li>
-                <li><a href="services/index.html">Services</a></li>
+                <li><a href="../about/index.html">About</a></li>
+                <li><a href="../portfolio/index.html">Portfolio</a></li>
+                <li><a href="#">Services</a></li>
             </ul>
 
             <ul class="spaced">
-                <li class="logo"><a href="#">[Logo]</a></li>
+                <li class="logo"><a href="../index.html">[Logo]</a></li>
                 <div class="menulinks">
-                    <li class="menuitem"><a href="about/index.html">About</a></li>
-                    <li class="menuitem"><a href="portfolio/index.html">Portfolio</a></li>
-                    <li class="menuitem"><a href="services/index.html">Services</a></li>
+                    <li class="menuitem"><a href="../about/index.html">About</a></li>
+                    <li class="menuitem"><a href="../portfolio/index.html">Portfolio</a></li>
+                    <li class="menuitem"><a href="#">Services</a></li>
                     <li class="hamburger">
                         <a href="#">
                             <svg class="icon" 
@@ -55,15 +55,8 @@
             </ul>
         </nav>
 
-        <h1>This is an H1</h1>
-        <h2>This is an H2</h2>
-        <h3>This is an H3</h3>
-        <h4>This is an H4</h4>
-        <h5>This is an H5</h5>
-        <h6>This is an H6</h6>
-
         <h6 class="eyebrow">Using H6 as an eyebrow</h6>
-        <h1>Can this H1 Typeset Work as a Heading?</h1>
+        <h1>SERVICES. Can this H1 Typeset Work as a Heading?</h1>
         <button>View Now</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque maxime sunt consectetur! Porro quam perferendis, earum incidunt natus fuga maxime doloribus laborum voluptatem eaque, corporis quas voluptates neque! Libero aut debitis ullam unde, necessitatibus velit ipsam saepe ex itaque incidunt iure optio illo ad nobis corrupti. Minima minus eius nesciunt!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quam eveniet ducimus perferendis id voluptas similique dolore nobis error magni quasi consequatur atque quos, molestias aliquam provident ipsa facere pariatur inventore labore architecto laborum quisquam. Voluptate exercitationem modi quibusdam alias nostrum quae doloremque, velit illum, inventore distinctio at doloribus, magni itaque eveniet. Ipsam distinctio sit odio nulla repellat reprehenderit? Ex amet asperiores ipsam corrupti quas ullam! Accusantium architecto officia eveniet labore commodi non corrupti animi? Ipsam soluta dolorem accusamus explicabo enim, iusto at aliquam aperiam ratione cupiditate non illum excepturi saepe porro qui consectetur fugiat? Nihil suscipit neque ipsam tenetur!</p>
@@ -73,7 +66,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quam eveniet ducimus perferendis id voluptas similique dolore nobis error magni quasi consequatur atque quos, molestias aliquam provident ipsa facere pariatur inventore labore architecto laborum quisquam. Voluptate exercitationem modi quibusdam alias nostrum quae doloremque, velit illum, inventore distinctio at doloribus, magni itaque eveniet. Ipsam distinctio sit odio nulla repellat reprehenderit? Ex amet asperiores ipsam corrupti quas ullam! Accusantium architecto officia eveniet labore commodi non corrupti animi? Ipsam soluta dolorem accusamus explicabo enim, iusto at aliquam aperiam ratione cupiditate non illum excepturi saepe porro qui consectetur fugiat? Nihil suscipit neque ipsam tenetur!</p>
     </body>
 
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 
 
 </html>
